--- a/Patterns/Patterns.vcxproj.filters
+++ b/Patterns/Patterns.vcxproj.filters
@@ -1,39 +1,43 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="Resource Files">
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Visitor">
+    <Filter Include="Source">
+      <UniqueIdentifier>{23adfa9b-27af-4988-81cd-6a9d1a6eb1f5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Observer">
+      <UniqueIdentifier>{1d11bc4c-72a1-4bcd-92ac-ce75d59d9984}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source\Visitor">
       <UniqueIdentifier>{ec7ca872-4315-4e6a-80e8-d1d026ad4663}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="VisitorTarget.cpp">
-      <Filter>Visitor</Filter>
+      <Filter>Source\Visitor</Filter>
+    </ClCompile>
+    <ClCompile Include="Observer.cpp">
+      <Filter>Source\Observer</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Visitor.h">
-      <Filter>Visitor</Filter>
+      <Filter>Source\Visitor</Filter>
     </ClInclude>
     <ClInclude Include="VisitorTarget.h">
-      <Filter>Visitor</Filter>
+      <Filter>Source\Visitor</Filter>
     </ClInclude>
-    <ClInclude Include="VisitorTest.h">
-      <Filter>Visitor</Filter>
+    <ClInclude Include="Observer.h">
+      <Filter>Source\Observer</Filter>
+    </ClInclude>
+    <ClInclude Include="TestVisitor.h">
+      <Filter>Source\Visitor</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
