--- a/Patterns/Patterns.vcxproj
+++ b/Patterns/Patterns.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Adapter.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Observer.cpp" />
@@ -125,6 +126,7 @@
     <ClCompile Include="VisitorTarget.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Adapter.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="Observer.h" />
     <ClInclude Include="Template.h" />
