--- a/Patterns/Patterns.vcxproj.filters
+++ b/Patterns/Patterns.vcxproj.filters
@@ -20,6 +20,9 @@
     <Filter Include="Source\Command">
       <UniqueIdentifier>{d2aacfc7-c0b3-4f85-b925-6c0a7d3375ea}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Adapter">
+      <UniqueIdentifier>{dbb4cb4c-c258-4c5a-90b0-2e8432857e97}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="VisitorTarget.cpp">
@@ -36,6 +39,9 @@
     </ClCompile>
     <ClCompile Include="Command.cpp">
       <Filter>Source\Command</Filter>
+    </ClCompile>
+    <ClCompile Include="Adapter.cpp">
+      <Filter>Source\Adapter</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -56,6 +62,9 @@
     </ClInclude>
     <ClInclude Include="Command.h">
       <Filter>Source\Command</Filter>
+    </ClInclude>
+    <ClInclude Include="Adapter.h">
+      <Filter>Source\Adapter</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
