--- a/Patterns/Patterns.vcxproj
+++ b/Patterns/Patterns.vcxproj
@@ -119,6 +119,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Adapter.cpp" />
+    <ClCompile Include="Builder.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Observer.cpp" />
@@ -127,6 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Adapter.h" />
+    <ClInclude Include="Builder.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="Observer.h" />
     <ClInclude Include="Template.h" />
